--- a/style.css
+++ b/style.css
@@ -184,3 +184,9 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #f1f1f1;
 }
+
+.Dashboard {
+    display: block;
+    width: 650px;
+    
+}
